WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258370
_WKFrameTreeNode should not inherit from WKFrameInfo
https://bugs.webkit.org/show_bug.cgi?id=258370
Summary
_WKFrameTreeNode should not inherit from WKFrameInfo
Alex Christensen
Reported
2023-06-21 14:55:18 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-21 14:55:36 PDT
<
rdar://problem/111125379
>
Alex Christensen
Comment 2
2023-06-21 14:58:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15161
EWS
Comment 3
2023-07-11 15:52:33 PDT
Committed
265971@main
(7f823a2dc8db): <
https://commits.webkit.org/265971@main
> Reviewed commits have been landed. Closing PR #15161 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug