_WKFrameTreeNode should not inherit from WKFrameInfo https://bugs.webkit.org/show_bug.cgi?id=258370 rdar://111125379

Reviewed by Tim Horton.

rdar://problem/111125090 makes it so there are no more users expecting the inheritance.
This reduces duplicate code and makes it so that adding a new selector won't cause crashes
when it's not implemented in two places.

* Source/WebKit/UIProcess/API/APIFrameTreeNode.cpp:
(API::FrameTreeNode::handle const): Deleted.
(API::FrameTreeNode::parentFrameHandle const): Deleted.
* Source/WebKit/UIProcess/API/APIFrameTreeNode.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKFrameTreeNode.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKFrameTreeNode.mm:
(-[_WKFrameTreeNode isMainFrame]): Deleted.
(-[_WKFrameTreeNode request]): Deleted.
(-[_WKFrameTreeNode securityOrigin]): Deleted.
(-[_WKFrameTreeNode webView]): Deleted.
(-[_WKFrameTreeNode copyWithZone:]): Deleted.
(-[_WKFrameTreeNode _handle]): Deleted.
(-[_WKFrameTreeNode _parentFrameHandle]): Deleted.
(-[_WKFrameTreeNode _processIdentifier]): Deleted.
(-[_WKFrameTreeNode _isLocalFrame]): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::findFramePID):
(TestWebKitAPI::TEST):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UserContentController.mm:
(TEST):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKURLSchemeHandler-1.mm:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm:
(TEST):

Canonical link: https://commits.webkit.org/265971@main