Source/WebKit/UIProcess/API/APIFrameTreeNode.h
@@ -43,21 +43,14 @@ public:
 
     WebKit::WebPageProxy& page() { return m_page.get(); }
     const WebKit::FrameInfoData& info() const { return m_data.info; }
-    bool isMainFrame() const { return m_data.info.isMainFrame; }
-    bool isLocalFrame() const { return m_data.info.frameType == WebKit::FrameType::Local; }
-    const WebCore::ResourceRequest& request() const { return m_data.info.request; }
-    const WebCore::SecurityOriginData& securityOrigin() const { return m_data.info.securityOrigin; }
     const Vector<WebKit::FrameTreeNodeData>& childFrames() const { return m_data.children; }
-    Ref<FrameHandle> handle() const;
-    RefPtr<FrameHandle> parentFrameHandle() const;
-    ProcessID processID() const { return m_data.info.processID; }
 
 private:
     FrameTreeNode(WebKit::FrameTreeNodeData&& data, WebKit::WebPageProxy& page)
         : m_data(WTFMove(data))
         , m_page(page) { }
 
-    WebKit::FrameTreeNodeData m_data;
+    const WebKit::FrameTreeNodeData m_data;
     Ref<WebKit::WebPageProxy> m_page;
 };
 
